# Open-Sprite-Sheet-Tools

./: CMakeLists.txt  README.md
src/OpenSpritSheetTools/: Exception.h  Main.cpp  Settings.cpp  Settings.h
src/OpenSpritSheetTools/Atlas/: Atlas.h  AtlasSerializer.h  DefaultAtlasSerializer.cpp  DefaultAtlasSerializer.h  Frame.h
src/OpenSpritSheetTools/AtlasExporters/: AtlasExporter.h  DefaultAtlasExporter.cpp  DefaultAtlasExporter.h
src/OpenSpritSheetTools/Gui/: GraphicsView.cpp  GraphicsView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  SpritePackerWidget.cpp  SpritePackerWidget.h  SpritePackerWidget.ui  SpriteSheetSplitterWidget.cpp  SpriteSheetSplitterWidget.h  SpriteSheetSplitterWidget.ui  ZoomModel.cpp  ZoomWidget.cpp  ZoomWidget.h
src/OpenSpritSheetTools/Resources/: Resources.qrc
src/OpenSpritSheetTools/Splitters/: AtlasSplitter.cpp  AtlasSplitter.h  GridSplitter.cpp  GridSplitter.h  Splitter.h
